@@ -1,0 +1,5 @@
+EXPECTED_EXIT=0
+cdecl -xc++ <<END
+define E as enum E of type int
+show typedef
+END
